Add training code.

--- a/FROMAGe_example_notebook.ipynb
+++ b/FROMAGe_example_notebook.ipynb
@@ -220,7 +220,7 @@
     "    print('Prompt:')\n",
     "    display_interleaved_outputs(prompt)\n",
     "    print('=' * 30)\n",
-    "    model_outputs, _, _ = model.generate_for_images_and_texts(prompt, max_num_rets=3)\n",
+    "    model_outputs = model.generate_for_images_and_texts(prompt, max_num_rets=3)\n",
     "\n",
     "    # Display outputs.\n",
     "    print('Model generated outputs:')\n",
@@ -342,7 +342,7 @@
     "    text += 'Q: ' + p + '\\nA:'\n",
     "    # Concatenate image and text.\n",
     "    model_prompt = input_context + [text]\n",
-    "    model_outputs, input_embs, input_ids = model.generate_for_images_and_texts(\n",
+    "    model_outputs = model.generate_for_images_and_texts(\n",
     "        model_prompt, num_words=32, ret_scale_factor=ret_scale_factor, max_num_rets=1)\n",
     "    text += ' '.join([s for s in model_outputs if type(s) == str]) + '\\n'\n",
     "    \n",
@@ -471,7 +471,7 @@
     "    text += 'Q: ' + p + '\\nA:'\n",
     "    # Concatenate image and text.\n",
     "    model_prompt = input_context + [text]\n",
-    "    model_outputs, input_embs, input_ids = model.generate_for_images_and_texts(\n",
+    "    model_outputs = model.generate_for_images_and_texts(\n",
     "        model_prompt, num_words=32, ret_scale_factor=ret_scale_factor, max_num_rets=3)\n",
     "    text += ' '.join([s for s in model_outputs if type(s) == str]) + '\\n'\n",
     "    \n",
