Add ceil for batch size in eval.

--- a/evals/VisDial_Inference_IT2T_Generation.ipynb
+++ b/evals/VisDial_Inference_IT2T_Generation.ipynb
@@ -262,7 +262,7 @@
     "            padded_example_labels = torch.cat(padded_example_labels, axis=0)\n",
     "\n",
     "            all_logits = []\n",
-    "            batches = int(padded_example_embs.shape[0] // batch_size)\n",
+    "            batches = int(np.ceil(padded_example_embs.shape[0] / batch_size))\n",
     "            for i in range(batches):\n",
     "                start_idx = i * batch_size\n",
     "                end_idx = start_idx + batch_size\n",
